force-app/main/default/objects/GM_Data__c/GM_Data__c.object-meta.xml
<CustomObject>
    <description>Contains grant-related data and indicators stemming from the group&apos;s grant application and their milestones</description>
    <label>GM Data</label>
    <nameField>
        <displayFormat>GMD-{0000000}</displayFormat>
        <label>GM Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GM Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>