force-app/main/default/objects/GM_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account linked to this GM data</description>
    <inlineHelpText>The account linked to this GM data</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GM Data</relationshipLabel>
    <relationshipName>GM_Data</relationshipName>
    <type>Lookup</type>
</CustomField>