force-app/main/default/objects/GM_Data__c/fields/Adolescent_girls__c.field-meta.xml
<CustomField>
    <fullName>Adolescent_girls__c</fullName>
    <description>Total number of adolescent girls, 12-17, reached during the grant period</description>
    <inlineHelpText>Total number of adolescent girls, 12-17, reached during the grant period</inlineHelpText>
    <label>Adolescent girls</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>