force-app/main/default/objects/GM_Data__c/fields/Adult_men__c.field-meta.xml
<CustomField>
    <fullName>Adult_men__c</fullName>
    <description>Total number of men, over 18, reached during the grant period</description>
    <inlineHelpText>Total number of men, over 18, reached during the grant period</inlineHelpText>
    <label>Adult men</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>