force-app/main/default/objects/GM_Data__c/fields/Boys__c.field-meta.xml
<CustomField>
    <fullName>Boys__c</fullName>
    <description>Total number of boys, under 18, reached during the grant period</description>
    <inlineHelpText>Total number of boys, under 18, reached during the grant period</inlineHelpText>
    <label>Boys</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>