force-app/main/default/objects/GM_Data__c/fields/Date_awarded__c.field-meta.xml
<CustomField>
    <fullName>Date_awarded__c</fullName>
    <description>Date awarded from linked proposal</description>
    <formula>Proposal__r.Date_awarded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date awarded from linked proposal</inlineHelpText>
    <label>Date awarded</label>
    <type>Date</type>
</CustomField>