force-app/main/default/objects/GM_Data__c/fields/Date_org_founded__c.field-meta.xml
<CustomField>
    <fullName>Date_org_founded__c</fullName>
    <description>The date org founded field from the linked account</description>
    <formula>Account__r.Date_org_founded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date org founded field from the linked account</inlineHelpText>
    <label>Date org founded</label>
    <type>Date</type>
</CustomField>