force-app/main/default/objects/GM_Data__c/fields/Fraction_of_grant_to_Operations__c.field-meta.xml
<CustomField>
    <fullName>Fraction_of_grant_to_Operations__c</fullName>
    <description>Fraction of Global Fund for Women grant that was allocated toward operations</description>
    <inlineHelpText>Fraction of Global Fund for Women grant that was allocated toward operations</inlineHelpText>
    <label>Fraction of grant to Operations</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>