force-app/main/default/objects/GM_Data__c/fields/Fraction_of_grant_to_Org_Capacity_Bldg__c.field-meta.xml
<CustomField>
    <fullName>Fraction_of_grant_to_Org_Capacity_Bldg__c</fullName>
    <description>Fraction of grant to Organizational Capacity Building</description>
    <inlineHelpText>Fraction of grant to Organizational Capacity Building</inlineHelpText>
    <label>Fraction of grant to Org Capacity Bldg</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>