force-app/main/default/objects/GM_Data__c/fields/Fraction_restricted_by_donors__c.field-meta.xml
<CustomField>
    <fullName>Fraction_restricted_by_donors__c</fullName>
    <description>Fraction of actual income in the most recent financial year that was restricted by donor(s) for specific projects/activities/expenses</description>
    <inlineHelpText>Fraction of actual income in the most recent financial year that was restricted by donor(s) for specific projects/activities/expenses</inlineHelpText>
    <label>Fraction restricted by donors</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>