force-app/main/default/objects/GM_Data__c/fields/Girls_under_12__c.field-meta.xml
<CustomField>
    <fullName>Girls_under_12__c</fullName>
    <description>Total number of girls, under 12, reached during the grant period</description>
    <inlineHelpText>Total number of girls, under 12, reached during the grant period</inlineHelpText>
    <label>Girls under 12</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>