force-app/main/default/objects/GM_Data__c/fields/GMData_count__c.field-meta.xml
<CustomField>
    <fullName>GMData_count__c</fullName>
    <description>Always has the value 1, for use in reports.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Always has the value 1, for use in reports.</inlineHelpText>
    <label>GMData count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>