force-app/main/default/objects/GM_Data__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The portfolio (if any) providing the context for restricted and eligibility-related fields in this GM Data record</description>
    <inlineHelpText>The portfolio (if any) providing the context for restricted and eligibility-related fields in this GM Data record</inlineHelpText>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>GM Data</relationshipLabel>
    <relationshipName>GM_Data</relationshipName>
    <type>Lookup</type>
</CustomField>