force-app/main/default/objects/GM_Data__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The profile record, if any, to which this GM data is linked</description>
    <inlineHelpText>The profile record, if any, to which this GM data is linked</inlineHelpText>
    <label>Profile</label>
    <referenceTo>Profile__c</referenceTo>
    <relationshipLabel>GM Data</relationshipLabel>
    <relationshipName>GM_Data</relationshipName>
    <type>Lookup</type>
</CustomField>