force-app/main/default/objects/GM_Data__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The proposal linked to this GM data</description>
    <inlineHelpText>The proposal linked to this GM data</inlineHelpText>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>GM Data</relationshipLabel>
    <relationshipName>GM_Data</relationshipName>
    <type>Lookup</type>
</CustomField>