force-app/main/default/objects/GM_Data__c/fields/Resource_mobilization_comment__c.field-meta.xml
<CustomField>
    <fullName>Resource_mobilization_comment__c</fullName>
    <description>If the group secured additional funding,  indicates the amount and funder(s) if available</description>
    <inlineHelpText>If the group secured additional funding,  indicates the amount and funder(s) if available</inlineHelpText>
    <label>Resource mobilization comment</label>
    <type>TextArea</type>
</CustomField>