force-app/main/default/objects/GM_Data__c/fields/Test_indicator_tracking__c.field-meta.xml
<CustomField>
    <fullName>Test_indicator_tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This test field is checked if there are linked indicator assigns for the indicator &quot;Test indicator&quot;.</description>
    <inlineHelpText>This test field is checked if there are linked indicator assigns for the indicator &quot;Test indicator&quot;.</inlineHelpText>
    <label>Test indicator tracking</label>
    <type>Checkbox</type>
</CustomField>