force-app/main/default/objects/GM_Data__c/fields/Total_direct_beneficiaries__c.field-meta.xml
<CustomField>
    <fullName>Total_direct_beneficiaries__c</fullName>
    <description>Total number of direct beneficiaries</description>
    <inlineHelpText>Total number of direct beneficiaries</inlineHelpText>
    <label>Total direct beneficiaries</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>