force-app/main/default/objects/GM_Data__c/fields/Total_expense_recent_completed_FY__c.field-meta.xml
<CustomField>
    <fullName>Total_expense_recent_completed_FY__c</fullName>
    <description>Total actual expenditure for the organization in their most recent financial year</description>
    <inlineHelpText>Total actual expenditure for the organization in their most recent financial year</inlineHelpText>
    <label>Total expense, recent completed FY</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>