force-app/main/default/objects/GM_Data__c/fields/Trans_adult__c.field-meta.xml
<CustomField>
    <fullName>Trans_adult__c</fullName>
    <description>Total number of trans adults, over 18, eached during the grant period</description>
    <inlineHelpText>Total number of trans adults, over 18, eached during the grant period</inlineHelpText>
    <label>Trans adult</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>