force-app/main/default/objects/GM_Data__c/fields/Trans_youth__c.field-meta.xml
<CustomField>
    <fullName>Trans_youth__c</fullName>
    <description>Total number of trans youth, under 18, reached during the grant period</description>
    <inlineHelpText>Total number of trans youth, under 18, reached during the grant period</inlineHelpText>
    <label>Trans youth</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>