force-app/main/default/objects/GM_Data__c/fields/Women__c.field-meta.xml
<CustomField>
    <fullName>Women__c</fullName>
    <description>Total number of women, 35 and older, reached during the grant period</description>
    <inlineHelpText>Total number of women, 35 and older, reached during the grant period</inlineHelpText>
    <label>Women</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>