force-app/main/default/objects/GM_Data__c/fields/Young_women__c.field-meta.xml
<CustomField>
    <fullName>Young_women__c</fullName>
    <description>Total number of young women, 18-34, reached during the grant period</description>
    <inlineHelpText>Total number of young women, 18-34, reached during the grant period</inlineHelpText>
    <label>Young women</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>