force-app/main/default/objects/GM_Data__c/validationRules/LinkedAccountClash.validationRule-meta.xml
<ValidationRule>
    <fullName>LinkedAccountClash</fullName>
    <active>true</active>
    <description>The account on this GM data record differs from the one on the linked proposal.</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK( Proposal__c )),
 Proposal__r.Account__c != Account__c
)</errorConditionFormula>
    <errorMessage>The account on this GM data record differs from the one on the linked proposal.</errorMessage>
</ValidationRule>