force-app/main/default/objects/GM_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Profile__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Account__c</columns>
    <columns>Proposal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>